--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/dotenv": "^8.2.0",
     "@types/ejs": "^3.0.5",
     "@types/express": "^4.17.11",
+    "@types/express-fileupload": "^1.1.6",
     "@types/express-session": "^1.17.3",
     "@types/moment": "^2.13.0",
     "@types/socket.io": "^2.1.13",
+    "@types/uuid": "^8.3.0",
+    "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "uuid": "^8.3.2"
   }
 }
